# poropack

./: Cargo.toml  README.md  flake.nix
brex/: Cargo.toml
brex/cases/: edge_cases.in  in.1  in.2  in.3  large_dump.in  substring_order.in
brex/src/: alphabet.rs  decode.rs  encode.rs  lib.rs  parse.rs  tests.rs  util.rs
brex/src/models/: brex.rs  group.rs  mod.rs  numeric.rs  suffix.rs
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
hash/: Cargo.toml
hash/src/: lib.rs
