[package]
name = "brex"
description = "Encode & decode brex strings, an encoding dedicated to representing repetitive League of Legends file names succinctly."
license = "AGPL-3.0-only"
repository = "https://github.com/alanpq/poropack"
version = "0.1.0"
edition = "2024"

[dependencies]
itertools = "0.14.0"
nom = "8.0.0"
test_each_file = "0.3.5"
thiserror = "2.0.16"
